--- a/shop_psg.html
+++ b/shop_psg.html
@@ -27,7 +27,7 @@
       </li>
 
       <li class="menu__link">
-        <a href="psg.html">Home</a>
+        <a href="index.html">Home</a>
       </li>
       <li class="menu__link">
         <a href="shop_psg.html">Shop</a>
