--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
       </li>
 
       <li class="menu__link">
-        <a href="psg.html">Home</a>
+        <a href="index.html">Home</a>
       </li>
       <li class="menu__link">
-        <a href="/shop_psg.html">Shop</a>
+        <a href="shop_psg.html">Shop</a>
       </li>
       <li class="menu__link">
         <a href="team_psg.html">Team</a>
@@ -84,27 +84,27 @@
     <div class="cups">
 
       <div>
-        <img src="/images/ligue1.png" alt="">
+        <img src="images/ligue1.png" alt="">
         <h3>Ligue 1</h3>
       </div>
 
       <div>
-        <img class="tro" src="/images/throphee.png" alt="">
+        <img class="tro" src="images/throphee.png" alt="">
         <h3>Trophée des Champions</h3>
       </div>
 
       <div>
-        <img class="coupe" src="/images/coupe.png" alt="">
+        <img class="coupe" src="images/coupe.png" alt="">
         <h3>Coupe de France</h3>
       </div>
 
       <div>
-        <img class="champions" src="/images/champions.png" alt="">
+        <img class="champions" src="images/champions.png" alt="">
         <h3>Champions League</h3>
       </div>
 
       <div>
-        <img class="world" src="/images/clubworld.png" alt="">
+        <img class="world" src="images/clubworld.png" alt="">
         <h3>Club World Cup</h3>
       </div>
 
