--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <a href="team_psg.html">Team</a>
       </li>
       <li class="menu__link">
-        <a href="/ucl_psg.html">UCL</a>
+        <a href="ucl_psg.html">UCL</a>
       </li>
       <li class="menu__link">
         <a href="">More</a>
